[package]
name = "RelativeDates"
version = "0.1.0"
authors = ["marie <marieqoeqoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "*"
rustc-serialize = "*"
[dependencies.clap]
git = "https://github.com/kbknapp/clap-rs"
